--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 code {
@@ -13,7 +14,7 @@ code {
 }
 
 #root {
-  background-image: url("./background.png");
+  background-color: black;
   background-repeat: repeat;
   background-size: auto 70%;
 }
