--- a/src/components/style/IngredientPanel.css
+++ b/src/components/style/IngredientPanel.css
@@ -1,8 +1,16 @@
 #panel {
+  border-top: 1px solid #404040;
   background-color: white;
   padding: 10px;
   min-height: 50px;
   height: fit-content;
   margin-bottom: 70px;
   width: 100%;
+  background: none;
+}
+
+#child-cont {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
