--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-color: #101010;
+}
+
+html {
+  margin: 0;
+  body: 0;
 }
 
 code {
@@ -14,7 +20,7 @@ code {
 }
 
 #root {
-  background-color: black;
+  background-color: #101010;
   background-repeat: repeat;
   background-size: auto 70%;
 }
